--- a/cats-service/build.gradle
+++ b/cats-service/build.gradle
@@ -2,10 +2,12 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.1'
     id 'io.spring.dependency-management' version '1.1.0'
+//    id 'org.springdoc.openapi-gradle-plugin' version "1.4.0"
 }
 
-group = 'ua.miceVsCats'
-version = '0.0.1-SNAPSHOT'
+group 'ua.micevscats.cats'
+version '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 configurations {
     compileOnly {
@@ -24,6 +26,8 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
 //    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
+    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.12'
 //    implementation 'org.springframework.boot:spring-boot-starter-web-services'
 //    implementation 'org.liquibase:liquibase-core'
 //    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
