--- a/cats-service/build.gradle
+++ b/cats-service/build.gradle
@@ -5,41 +5,45 @@ plugins {
 //    id 'org.springdoc.openapi-gradle-plugin' version "1.4.0"
 }
 
-group 'ua.micevscats.cats'
-version '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
 }
-
 repositories {
     mavenCentral()
 }
-
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.0"
+    }
+}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
-    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.12'
-//    implementation 'org.springframework.boot:spring-boot-starter-web-services'
-//    implementation 'org.liquibase:liquibase-core'
-//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
     compileOnly 'org.projectlombok:lombok'
-//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
-//    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+//    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+//    implementation 'org.springframework.boot:spring-boot-starter-web-services'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+////    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity'
+////    implementation 'org.liquibase:liquibase-core'
+////    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+////    testImplementation 'org.springframework.security:spring-security-test'
 }
 
+//openApi {
+////    apiDocsUrl.set("http://localhost:8090/v3/api-docs.yaml")
+//    outputDir.set(file("src/main/resources"))
+//    outputFileName.set("openapi.json")
+//    waitTimeInSeconds.set(60)
 tasks.named('test') {
     useJUnitPlatform()
 }
