--- a/mice-hunt-service/build.gradle
+++ b/mice-hunt-service/build.gradle
@@ -4,10 +4,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id "org.springdoc.openapi-gradle-plugin" version "1.6.0"
 }
-
-group 'ua.cats-service'
+group 'ua.micehunt'
 version 'unspecified'
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -27,27 +25,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
-
+    implementation 'org.jetbrains:annotations:20.1.0'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-//    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-//    implementation 'org.springframework.boot:spring-boot-starter-web-services'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-////    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity'
-////    implementation 'org.liquibase:liquibase-core'
-////    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-////    testImplementation 'org.springframework.security:spring-security-test'
-}
+    implementation 'org.springframework.boot:spring-boot-starter-parent:3.0.2'
 
-//openApi {
-////    apiDocsUrl.set("http://localhost:8090/v3/api-docs.yaml")
-//    outputDir.set(file("src/main/resources"))
-//    outputFileName.set("openapi.json")
-//    waitTimeInSeconds.set(60)
+}
 tasks.named('test') {
     useJUnitPlatform()
 }
