--- a/cats-service/build.gradle
+++ b/cats-service/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id "org.springdoc.openapi-gradle-plugin" version "1.6.0"
 }
 
-group 'ua.cats-service'
+group 'ua.cats'
 version 'unspecified'
 
 configurations {
@@ -22,17 +22,26 @@ dependencyManagement {
     }
 }
 dependencies {
+//    implementation project(':mice-hunt-service')
+    implementation project(':mice-moving-service')
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
 
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+//    compileOnly 'org.projectlombok:lombok'
+//    annotationProcessor 'org.projectlombok:lombok'
+//    runtimeOnly 'org.postgresql:postgresql'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
 //    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 //    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 //    implementation 'org.springframework.boot:spring-boot-starter-web-services'
@@ -42,12 +51,6 @@ dependencies {
 ////    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 ////    testImplementation 'org.springframework.security:spring-security-test'
 }
-
-//openApi {
-////    apiDocsUrl.set("http://localhost:8090/v3/api-docs.yaml")
-//    outputDir.set(file("src/main/resources"))
-//    outputFileName.set("openapi.json")
-//    waitTimeInSeconds.set(60)
 tasks.named('test') {
     useJUnitPlatform()
 }
