--- a/mice-service/build.gradle
+++ b/mice-service/build.gradle
@@ -4,8 +4,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id "org.springdoc.openapi-gradle-plugin" version "1.6.0"
 }
-group 'ua.micehunt'
+
+group 'ua.miceservice'
 version 'unspecified'
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -20,23 +22,20 @@ dependencyManagement {
     }
 }
 dependencies {
-    implementation 'com.squareup.okhttp:okhttp:2.7.5'
-    implementation 'com.google.code.gson:gson:2.10.1'
-
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
-    implementation 'org.jetbrains:annotations:20.1.0'
+
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-//    runtimeOnly 'org.postgresql:postgresql'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-//    implementation 'org.springframework.boot:spring-boot-starter-parent:3.0.2'
-
+    runtimeOnly 'org.postgresql:postgresql'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
+
 tasks.named('test') {
     useJUnitPlatform()
 }
