Small refactoring before issue

--- a/mice-moving-service/build.gradle
+++ b/mice-moving-service/build.gradle
@@ -2,20 +2,25 @@ plugins {
     id 'java'
 }
 
-group 'ua.mice-moving-service'
+group 'ua.micemoving'
 version 'unspecified'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 repositories {
     mavenCentral()
 }
 
 dependencies {
-//    implementation project(':cats-service')
-
+    implementation 'org.projectlombok:lombok:1.18.22'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
-
 test {
     useJUnitPlatform()
 }
