--- a/mice-moving-service/build.gradle
+++ b/mice-moving-service/build.gradle
@@ -23,18 +23,12 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation 'com.squareup.okhttp:okhttp:2.7.5'
-    implementation 'com.google.code.gson:gson:2.10.1'
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
-    implementation 'org.jetbrains:annotations:20.1.0'
-    implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
