--- a/mice-moving-service/src/main/resources/application.yaml
+++ b/mice-moving-service/src/main/resources/application.yaml
@@ -5,9 +5,8 @@ spring:
   application:
     name: mice-moving-service
 
-  logging:
+logging:
     level:
       org.springframework: INFO
-      org.hibernate: DEBUG
-      ua.micehunt: DEBUG
+      ua.micemoving: DEBUG
 
